[project]
name = "portr-admin"
version = "0.0.18-beta"
description = "Add your description here"
authors = [{ name = "amalshaji", email = "amalshajid@gmail.com" }]
dependencies = [
    "nanoid>=2.0.0",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "tortoise-orm[asyncpg]>=0.20.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.3",
    "python-slugify[unidecode]>=8.0.4",
    "python-ulid>=2.2.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.6.1",
    "email-validator>=2.1.0.post1",
    "aiosmtplib>=3.0.1",
    "cryptography>=42.0.5",
    "aerich>=0.7.2",
    "passlib>=1.7.4",
    "argon2-cffi>=23.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "portr_admin:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.5.0",
    "pytest>=8.0.1",
    "factory-boy>=3.3.0",
    "pytest-asyncio>=0.23.5",
    "asgi-lifespan>=2.1.0",
    "async-factory-boy>=1.0.1",
    "mimesis>=14.0.0",
    "ipdb>=0.13.13",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.aerich]
tortoise_orm = "config.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
